--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -24,9 +24,8 @@
             </ul>
         </nav>
     </header>
+    <h1>Pirokinesis</h1>
     <div class="text">
-        <h1>Pirokinesis</h1>
-
         <p>Андрей Игоревич Федорович (род. 16 декабря 1996, Багерово, Украина), более известный как Pyrokinesis (рус.
             Пирокинезис, от пирокинез -
             способность управлять огнём силой мысли) — российский рэп-исполнитель.</p>
@@ -40,16 +39,16 @@
             Лана Дель Рей, Каста, Виктор Пелевин, Энди Уорхол и другие.</p>
 
         <p>Студийные альбомы</p>
-        <p>• 2015- Black Roze x Red Roze</p>
-        <p>• 2016- Eclipse</p>
-        <p>• 2017 - «Терновый венец эволюции»</p>
-        <p>• 2018 - «Корми демонов по расписанию» </p>
-        <p>• 2019 - «Акустический»</p>
-        <p>• 2019 - «Моя милая пустота»</p>
-        <p>• 2020- «Питер, чай, не Франция» </p>
-        <p>• 2022 - «Геометрия тьмы»</p>
-
-
+        <ul>
+            <li>2015- Black Roze x Red Roze</li>
+            <li>2016- Eclipse</li>
+            <li>2017 - «Терновый венец эволюции»</li>
+            <li>2018 - «Корми демонов по расписанию»</li>
+            <li>2019 - «Акустический»</li>
+            <li>2019 - «Моя милая пустота»</li>
+            <li>2020- «Питер, чай, не Франция»</li>
+            <li>2022 - «Геометрия тьмы»</li>
+        </ul>
     </div>
 
 </body>
