--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             <li>2022 - «Геометрия тьмы»</li>
         </ul>
     </div>
+    <div class="e-mail">
+
+    </div>
+    <div class="banner">
+        <img src="img/banner.PNG">
+    </div>
 
 </body>
 
